--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,11 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.20"
+evm_version = "paris"
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+base_sepolia = "https://sepolia.base.org"
+
+[etherscan]
+base_sepolia = { key = "${BASESCAN_API_KEY}" }
