--- a/foundry.toml
+++ b/foundry.toml
@@ -2,11 +2,10 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-solc = "0.8.20"
-evm_version = "paris"
-
-[rpc_endpoints]
-base_sepolia = "https://sepolia.base.org"
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"]
 
 [etherscan]
-base_sepolia = { key = "${BASESCAN_API_KEY}" }
+base-sepolia = { key = "${BASESCAN_API_KEY}", url = "https://api-sepolia.basescan.org/api" }
+
+[rpc_endpoints]
+base-sepolia = "https://sepolia.base.org"
